--- a/src/components/Card/Card.module.scss
+++ b/src/components/Card/Card.module.scss
@@ -3,6 +3,7 @@
 .card {
     position: relative;
     background: $color-light;
+    color: $color-dark;
     border: 1px solid lighten($color-dark, 60%);
     padding: $base-size;
     margin: 0 0 $base-size 0;
