--- a/src/components/Hero/Hero.module.scss
+++ b/src/components/Hero/Hero.module.scss
@@ -12,7 +12,7 @@
 }
 
 .subtitle {
-  padding: ($base-size * 2) 0;
+  padding: 0 0 0 ($base-size * 2) ;
   text-align: center;
   font-size: ($base-size * 2);
   font-style: italic;
