--- a/src/components/Column/Column.module.scss
+++ b/src/components/Column/Column.module.scss
@@ -3,8 +3,8 @@
 
 .list {
   background-color: $color-light;
-    border-radius: $radius;
-    padding: $base-size * 1.5;
+  border-radius: $radius;
+  padding: $base-size * 1.5;
 }
 
 .column {
@@ -14,7 +14,7 @@
   margin: 0 $base-size $base-size 0;
   padding: ($base-size * 1.5);
   border-radius: $radius;
-  box-shadow: 0 math.div($base-size, 4) 0 rgba(0,0,0,0.3);
+  box-shadow: 0 math.div($base-size, 4) 0 rgba(0, 0, 0, 0.3);
   color: $color-dark;
 
   &:last-child {
@@ -23,18 +23,26 @@
 }
 
 .title {
-  text-align: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   font-size: ($base-size * 1.5);
   margin: 0 0 ($base-size * 1.5) 0;
+
+  span:last-child {
+    margin-left: 0.5rem;
+  }
 }
 
-.icon::before {
-  padding-right: $base-size;
-  color: $color-warning;
-  font-size: ($base-size * 2);
-  vertical-align: middle;
-  position: relative;
-  top: - math.div($base-size, 3);
+.icon {
+  display: inline-block;
+
+  &::before {
+    padding-right: $base-size;
+    color: $color-warning;
+    font-size: ($base-size * 2);
+    vertical-align: middle;
+  }
 }
 
 .cards {
