update Favorite.module.scss styles

--- a/src/components/Favorite/Favorite.module.scss
+++ b/src/components/Favorite/Favorite.module.scss
@@ -1,5 +1,23 @@
+@use "sass:math";
 @import '../../styles/settings.scss';
 
 .favorites {
     padding: $base-size;
+    margin-top: $base-size * 2;
+
+    h2 {
+        margin-bottom: $base-size *2;
+    }
+
+    .cards {
+        display: flex;
+        flex-shrink: 0;
+        justify-self: center;
+        flex-direction: column;
+        width: calc(64% - 12px);
+        margin: 0 $base-size;
+        padding: ($base-size * 1.5);
+        color: $color-dark;
+        gap: $base-size / 5;
+    }
 }
